--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,3 +1,25 @@
-<h4>Content from Server</h4>
-{{board}}
+<h4>Admin only content</h4>
+
+<table>
+    <tr>
+        <th>id</th>
+        <th>Name</th>
+        <th>Username</th>
+        <th>Password(encrypted)</th>
+        <th>Roles</th>
+    </tr>
+    <tr *ngFor="let user of users">
+        <td>{{user.id}}</td>
+        <td>{{user.name}}</td>
+        <td>{{user.email}}</td>
+        <td>{{user.password}}</td>
+        <td>
+            <ul>
+                <li *ngFor="let role of user.roles">{{role.name}}</li>
+            </ul>
+        </td>
+    </tr>
+</table>
+
+
 {{errorMessage}}
